added nano-graphrag implementation

--- a/assignments/Project-Erica/embedding-nb.ipynb
+++ b/assignments/Project-Erica/embedding-nb.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Preprocessing Data imports\n",
+    "\n",
+    "- decompresses, chunks and stores embedding (using ollama embedding model) \n",
+    "- we actually don't need this nor the outputs (embeddings.jsonl, chunks.jsonl) because the nano-graphrag codebase already has that pipeline\n",
+    "- but useful to inspect data so I'll leave it here\n",
+    "\n",
+    "\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Decompress the .json.gz file from the scraper"
    ]
   },
